[package]
name    = "threading"
version = "0.1.2"
license = "MIT"
authors = ["dangcheng <dangcheng@hotmail.com>"]
description = "Thread pool for Rust"
documentation = "https://docs.rs/threading"
homepage      = "https://github.com/mcorce/threading"
repository    = "https://github.com/mcorce/threading"
readme        = "README.md"
keywords      = ["thread", "threadpool", "thread_pool", "pool"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
num_cpus = "1.3"
